--- a/ventana.ui
+++ b/ventana.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1278</width>
-    <height>1009</height>
+    <height>1010</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -140,43 +140,7 @@
           <property name="sizeConstraint">
            <enum>QLayout::SetFixedSize</enum>
           </property>
-          <item row="0" column="7">
-           <widget class="QCheckBox" name="chkTar">
-            <property name="text">
-             <string>Tarjeta</string>
-            </property>
-            <attribute name="buttonGroup">
-             <string notr="true">grpbtnPay</string>
-            </attribute>
-           </widget>
-          </item>
-          <item row="0" column="3">
-           <spacer name="horizontalSpacer_7">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeType">
-             <enum>QSizePolicy::Fixed</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>310</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="0" column="1">
-           <widget class="QRadioButton" name="rbtFem">
-            <property name="text">
-             <string>Femenino</string>
-            </property>
-            <attribute name="buttonGroup">
-             <string notr="true">grpbtnSex</string>
-            </attribute>
-           </widget>
-          </item>
-          <item row="0" column="8">
+          <item row="2" column="8">
            <widget class="QCheckBox" name="chkTrans">
             <property name="text">
              <string>Transferencia</string>
@@ -186,7 +150,7 @@
             </attribute>
            </widget>
           </item>
-          <item row="0" column="0">
+          <item row="2" column="0">
            <widget class="QLabel" name="lblSexo">
             <property name="font">
              <font>
@@ -202,7 +166,27 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="6">
+          <item row="2" column="1">
+           <widget class="QRadioButton" name="rbtFem">
+            <property name="text">
+             <string>Femenino</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">grpbtnSex</string>
+            </attribute>
+           </widget>
+          </item>
+          <item row="2" column="7">
+           <widget class="QCheckBox" name="chkTar">
+            <property name="text">
+             <string>Tarjeta</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">grpbtnPay</string>
+            </attribute>
+           </widget>
+          </item>
+          <item row="2" column="6">
            <widget class="QCheckBox" name="chkEfec">
             <property name="text">
              <string>Efectivo</string>
@@ -212,7 +196,7 @@
             </attribute>
            </widget>
           </item>
-          <item row="0" column="2">
+          <item row="2" column="2">
            <widget class="QRadioButton" name="rbtMasc">
             <property name="text">
              <string>Masculino</string>
@@ -222,7 +206,7 @@
             </attribute>
            </widget>
           </item>
-          <item row="0" column="5">
+          <item row="2" column="5">
            <widget class="QLabel" name="lblPago">
             <property name="font">
              <font>
@@ -234,6 +218,9 @@
              <string>Métodos de Pago:  </string>
             </property>
            </widget>
+          </item>
+          <item row="2" column="4">
+           <widget class="QSpinBox" name="spinEdad"/>
           </item>
          </layout>
         </item>
@@ -589,6 +576,12 @@
           </item>
           <item row="2" column="4">
            <widget class="QLabel" name="lblCodCli">
+            <property name="cursor">
+             <cursorShape>ArrowCursor</cursorShape>
+            </property>
+            <property name="mouseTracking">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string/>
             </property>
@@ -598,14 +591,14 @@
         </item>
         <item row="4" column="0">
          <layout class="QGridLayout" name="gridBoton">
-          <item row="4" column="0">
+          <item row="5" column="0">
            <widget class="Line" name="line_2">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
            </widget>
           </item>
-          <item row="0" column="0">
+          <item row="1" column="0">
            <widget class="QTableWidget" name="tableCli">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -684,8 +677,8 @@
             </column>
            </widget>
           </item>
-          <item row="3" column="0">
-           <widget class="QGroupBox" name="">
+          <item row="4" column="0">
+           <widget class="QGroupBox" name="groupBox">
             <layout class="QGridLayout" name="gridLayout">
              <property name="leftMargin">
               <number>10</number>
@@ -813,6 +806,20 @@
    <addaction name="menuArchivo"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="ToolBarBackup"/>
+   <addaction name="separator"/>
+   <addaction name="ToolbarSalir"/>
+  </widget>
   <action name="actionSalir">
    <property name="text">
     <string>Salir</string>
@@ -821,9 +828,41 @@
     <string>Alt+S</string>
    </property>
   </action>
+  <action name="ToolBarBackup">
+   <property name="icon">
+    <iconset resource="img/toolbarbackup.qrc">
+     <normaloff>:/backup/backup.png</normaloff>:/backup/backup.png</iconset>
+   </property>
+   <property name="text">
+    <string>Backup</string>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/backup/backup.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="shortcut">
+    <string>Alt+B</string>
+   </property>
+  </action>
+  <action name="ToolbarSalir">
+   <property name="icon">
+    <iconset resource="img/toolbarsalir.qrc">
+     <normaloff>:/Salir/iconsalir.png</normaloff>:/Salir/iconsalir.png</iconset>
+   </property>
+   <property name="text">
+    <string>Salir</string>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/Salir/iconsalir.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="shortcut">
+    <string>Alt+S</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="img/logo.qrc"/>
+  <include location="img/toolbarbackup.qrc"/>
+  <include location="img/toolbarsalir.qrc"/>
  </resources>
  <connections/>
  <buttongroups>
