Añadir ToolBar imprimir y cambio mombre dlgvsalir

--- a/ventana.ui
+++ b/ventana.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1278</width>
-    <height>1010</height>
+    <height>1012</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -859,15 +859,27 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
-   <addaction name="ToolBarBackup"/>
    <addaction name="separator"/>
-   <addaction name="ToolbarSalir"/>
    <addaction name="ToolBarAbrirDir"/>
+   <addaction name="actionImprimir"/>
+   <addaction name="ToolBarBackup"/>
   </widget>
   <widget class="QStatusBar" name="statusBar">
    <property name="enabled">
     <bool>true</bool>
    </property>
+  </widget>
+  <widget class="QToolBar" name="toolBar_2">
+   <property name="windowTitle">
+    <string>toolBar_2</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="ToolbarSalir"/>
   </widget>
   <action name="actionSalir">
    <property name="text">
@@ -919,9 +931,25 @@
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/abrirdir/abrirDir.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </action>
+  <action name="actionImprimir">
+   <property name="icon">
+    <iconset resource="img/toolBarPrinter.qrc">
+     <normaloff>:/Imprimir/printer.png</normaloff>:/Imprimir/printer.png</iconset>
+   </property>
+   <property name="text">
+    <string>Imprimir</string>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/Imprimir/printer.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+P</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="img/logo.qrc"/>
+  <include location="img/toolBarPrinter.qrc"/>
   <include location="img/toolabrirDir.qrc"/>
   <include location="img/reload.qrc"/>
   <include location="img/Buscar.qrc"/>
@@ -930,11 +958,11 @@
  </resources>
  <connections/>
  <buttongroups>
-  <buttongroup name="grpbtnSex"/>
   <buttongroup name="grpbtnPay">
    <property name="exclusive">
     <bool>false</bool>
    </property>
   </buttongroup>
+  <buttongroup name="grpbtnSex"/>
  </buttongroups>
 </ui>
