--- a/ventana.ui
+++ b/ventana.ui
@@ -889,7 +889,7 @@
          <string>Nombre: </string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="editArtic">
+       <widget class="QLineEdit" name="editNomeProducto">
         <property name="geometry">
          <rect>
           <x>140</x>
@@ -936,7 +936,7 @@
          <string>Precio:</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="editPrec">
+       <widget class="QLineEdit" name="EditPrecio">
         <property name="geometry">
          <rect>
           <x>630</x>
@@ -1131,20 +1131,6 @@
           <set>AlignCenter</set>
          </property>
         </column>
-        <column>
-         <property name="text">
-          <string>STOCK</string>
-         </property>
-         <property name="font">
-          <font>
-           <weight>75</weight>
-           <bold>true</bold>
-          </font>
-         </property>
-         <property name="textAlignment">
-          <set>AlignCenter</set>
-         </property>
-        </column>
        </widget>
        <widget class="QLabel" name="lblStock">
         <property name="geometry">
@@ -1174,7 +1160,7 @@
          <string>Stock:</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="editStock">
+       <widget class="QLineEdit" name="EditStock">
         <property name="geometry">
          <rect>
           <x>830</x>
@@ -1355,11 +1341,11 @@
  </resources>
  <connections/>
  <buttongroups>
+  <buttongroup name="grpbtnSex"/>
   <buttongroup name="grpbtnPay">
    <property name="exclusive">
     <bool>false</bool>
    </property>
   </buttongroup>
-  <buttongroup name="grpbtnSex"/>
  </buttongroups>
 </ui>
